<resources>
    <string name="app_name">Admin Waves Of Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="add_item">Add Item</string>
    <string name="password">Password</string>
    <string name="email">Email Or Phone Number</string>
    <string name="full_name">Full-OF Owner</string>
    <string name="create_new_user">Create New User</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="image_description">image_description</string>
    <string name="login_to_your_n_admin_dashboard">Login To Your \n Admin Dashboard</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="customer_name">Customer Name</string>
    <string name="quantity">Quantity</string>
    <string name="two">3</string>
    <string name="accept">Accept</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivery">Delivery</string>
    <string name="cart_food_name">Cart Food Name</string>
    <string name="price">Price</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="karachi">karachi</string>
    <string name="sign_up_here_for_your_n_admin_dashboard">Sign Up Here For Your \n Admin Dashboard</string>
    <string name="create_account">Create Account</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="pending_order">Pending Order</string>
    <string name="_50">$50</string>
    <string name="completed_norder">Completed \norder</string>
    <string name="_80">80</string>
    <string name="whole_time_nearning">Whole Time \nEarning</string>
    <string name="_100">$100</string>
    <string name="add_menu">Add Menu</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="select_image">Select Image</string>
    <string name="short_description">Short Description</string>
    <string name="lorem_ipsum_text">Add Here Description \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="ingredients">Ingredients</string>
    <string name="noddle">Noddle \n Salad \n Burger \n Herbal Pan Cake \n Momos</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="name">Name</string>
    <string name="admin">Admin</string>
    <string name="address">Address</string>
    <string name="enables_showing">Enables showing a submit button when the query is non-empty. In cases where be disabled</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_123456789">123456789</string>
    <string name="pass">*********</string>
    <string name="save_information">Save Information</string>

    <string name="default_web_client_id" translatable="false">732386522808-1umop6dsudtos1ufn45mfn2cqp3ma550.apps.googleusercontent.com</string>
    <string name="image_desc_text">Description Image\n</string>
</resources>