<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.SignUpActivity">

    <TextView
        android:id="@+id/textViewAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <EditText
        android:id="@+id/editTextSignUpTextName"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextSignUpNameOfRestaurant"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/home02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name_of_restaurant"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpTextName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextSignUpTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpNameOfRestaurant"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpNameOfRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpNameOfRestaurant"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextSignUpTextPassword"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpTextEmailAddress"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/textViewSignUPMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/choose_your_location"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUPSubTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_shape"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_circle_down"
        app:endIconMode="dropdown_menu"
        app:endIconTint="@color/black"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUPMessage">

        <AutoCompleteTextView
            android:id="@+id/listOfLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:inputType="none"
            android:text="@string/karachi" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSignUPTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/waves_of_food"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSignUPIcon"
        app:layout_constraintStart_toStartOf="@+id/imageViewSignUPIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignUPIcon" />

    <TextView
        android:id="@+id/textViewSignUPSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_up_here_for_your_n_admin_dashboard"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignUPTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewSignUPTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUPTitle" />

    <ImageView
        android:id="@+id/imageViewSignUPIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/image_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_button_gradient"
        android:fontFamily="@font/yeon_sung_regular"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>